1. fixed view of dates; 2. fixed alignment in tables; 3. user cart fixed

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -183,4 +183,10 @@ table.table-style-one td {
     border-style: solid;
     border-color: #abadb3;
     background-color: #ffffff;
+    text-align: center;
 }
+
+input[type="number"] {
+    width: 90px;
+}
+
